# OpenCVProjects

./: README.md
Background Substraction/: CMakeLists.txt  main.cpp
Binary Thresholding/: CMakeLists.txt  main.cpp
Canny Edge Detector Real Time/: CMakeLists.txt  main.cpp
DrawingShapes/: CMakeLists.txt  main.cpp
Face Detection/: CMakeLists.txt  main.cpp
Face Detection in Real Time/: CMakeLists.txt  main.cpp
Real Time Image Thresholding/: CMakeLists.txt  main.cpp
Test Tesst/: CMakeLists.txt
